--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #34568b;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,6 +26,13 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.button {
+  height: 20%;
+  width: 25%;
+  font-family: "verdana";
+  font-size: 12px;
 }
 
 @keyframes App-logo-spin {
